--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -5,7 +5,8 @@
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
     {{>header}}
-    <p class="error404🗿">{{errorMessage}}</p>
+    <p class="error404">{{errorMessage}} 🗿</p>
+
     {{>footer}}
     {{>js}}
 </body>
