changing about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,8 +15,8 @@
       <div id="owl-testmonial" class="owl-carousel owl-theme mt-4">
         <div class="item">
           <div class="textmonial-item">
-            <img src="https://quera.org/media/CACHE/images/public/avatars/aed56a7500864f6d9430398fce9f0210/bb7c72850b601db70b09587860e85df2.jpg" class="avatar"
-              alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, ollie Landing page" />
+            <img src="/imgs/avatar.jpg" class="avatar"
+              alt="sajadzarepour" />
             <div class="des">
               <h5 class="ti-quote-left font-weight-bold"></h5>
               <p class="aboutMe">
