--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -23,6 +23,7 @@
                   <input type="text" placeholder="Enter your location">
                 <button class="btn btn-primary btn-rounded">Submit</button>
                 </form>
+                <h6 class="greeting"></h5>
                 <h5 class="weatherResultOne"></h5>
                 <h5 class="weatherResultTwo"></h5>
               </div>
