--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -24,6 +24,7 @@
                 <button class="btn btn-primary btn-rounded">Submit</button>
                 </form>
                 <h6 class="greeting"></h5>
+                <div class="secline"></div>
                 <h5 class="weatherResultOne"></h5>
                 <h5 class="weatherResultTwo"></h5>
               </div>
